--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,7 @@ dependencies {
 
     // Fragments
     implementation "androidx.fragment:fragment-ktx:1.3.4"
+
+    //RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 }
